// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default component 1`] = `
<div
  className="content-container"
>
  <div
    className="main"
  >
    <div
      className="normalizer"
    />
  </div>
</div>
`;

exports[`should render a footer 1`] = `
<div
  className="content-container"
>
  <div
    className="main"
  >
    <div
      className="normalizer"
    />
  </div>
  <div
    className="footer"
  >
    <p>
      Footer
    </p>
  </div>
</div>
`;

exports[`should render a header 1`] = `
<div
  className="content-container"
>
  <div
    className="header"
  >
    <p>
      Header
    </p>
  </div>
  <div
    className="main"
  >
    <div
      className="normalizer"
    />
  </div>
</div>
`;

exports[`should render as fill 1`] = `
<div
  className="content-container fill"
>
  <div
    className="main"
  >
    <div
      className="normalizer"
    />
  </div>
</div>
`;

exports[`should render content 1`] = `
<div
  className="content-container"
>
  <div
    className="main"
  >
    <div
      className="normalizer"
    >
      <p>
        test content
      </p>
    </div>
  </div>
</div>
`;

exports[`should render header & footer 1`] = `
<div
  className="content-container"
>
  <div
    className="header"
  >
    <p>
      Header
    </p>
  </div>
  <div
    className="main"
  >
    <div
      className="normalizer"
    />
  </div>
  <div
    className="footer"
  >
    <p>
      Footer
    </p>
  </div>
</div>
`;
